# kee

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
_scratch/: scene.hpp
assets/shaders/: sdf.fs  sdf_rect.fs  sdf_rounded_rect.fs  sdf_text.fs  sdf_triangle.fs
include/kee/: game.hpp  game.ipp  geometry.hpp  global_assets.hpp  scene.hpp  transition.hpp  transition.ipp  ui_common.hpp  ui_common.ipp
include/kee/scene/: base.hpp  beatmap.hpp  editor.hpp  manager.hpp  menu.hpp  transition.hpp  transition.ipp
include/kee/scene/editor/: compose_tab.hpp  decoration_tab.hpp  metadata_tab.hpp  root.hpp  setup_tab.hpp  timing_tab.hpp
include/kee/ui/: base.hpp  base.ipp  button.hpp  dropdown.hpp  file_dialog.hpp  image.hpp  key.hpp  rect.hpp  scissor.hpp  scrollable.hpp  scrollable.ipp  slider.hpp  text.hpp  textbox.hpp  triangle.hpp  video.hpp  video_player.hpp
include/kee/ui/scene/: base.hpp  beatmap.hpp
src/: game.cpp  geometry.cpp  global_assets.cpp  main.cpp  scene.cpp  transition.cpp  ui_common.cpp
src/kee/: game.cpp  scene.cpp
src/scene/: base.cpp  beatmap.cpp  editor.cpp  manager.cpp  menu.cpp  transition.cpp
src/scene/editor/: compose_tab.cpp  decoration_tab.cpp  metadata_tab.cpp  root.cpp  setup_tab.cpp  timing_tab.cpp
src/ui/: base.cpp  button.cpp  dropdown.cpp  file_dialog.cpp  image.cpp  key.cpp  rect.cpp  scissor.cpp  scrollable.cpp  slider.cpp  text.cpp  textbox.cpp  triangle.cpp  video.cpp  video_player.cpp
src/ui/scene/: base.cpp  beatmap.cpp
test_app_data/: user_scores.json
test_app_data/daft-punk-something-about-us/: metadata.json
test_app_data/local_0/: metadata.json
test_app_data/local_1 copy/: key_colors.json
test_app_data/play/0000000001/: performance.json
test_app_data/play/daft-punk-something-about-us/: key_colors.json  metadata.json  performance.json
test_app_data/play/local_1/: metadata.json
